Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-30347

The app is crashing when manually removing added Android Qt versions

XMLWordPrintable

    • macOS
    • e31a06a0f (13.0)

      Qt Creator 12.0.1

      Based on Qt 6.6.0 (Clang 13.0 (Apple), x86_64)
      Built on Dec 11 2023 00:36:56
      macOS 14.3 (23D56)

      I faced that crash when removing unnecessary versions somehow appeared in the Qt Creator. I had to spend some time to find the repro steps. They are quite complex, but I managed to achieve 100% repro with them. 

       

      Steps:

      1. Open the app and go to preferences.

      2. Manually add 2 Android Qt versions (I added x86 and x86_64).

      3. Open any project from examples.

      4. Select one of the versions added in the previous step.

      5. Click the 'Manage Kits' button and go to the Qt versions tab. 

      6. Remove 2 added versions by selecting them and clicking the 'Remove' button.

      7. Click OK. 

      Expected: Versions are removed.

      Actual: The app crashes. After relaunching the app - one of the versions is not removed.  See the attached video for more details. Attached the crash log.

      Crashed Thread:        0  Dispatch queue: com.apple.main-threadException Type:        EXC_BAD_ACCESS (SIGSEGV)
      Exception Codes:       KERN_INVALID_ADDRESS at 0x00001528a3de3f78
      Exception Codes:       0x0000000000000001, 0x00001528a3de3f78Termination Reason:    Namespace SIGNAL, Code 11 Segmentation fault: 11
      Terminating Process:   exc handler [15345] 

       

        For Gerrit Dashboard: QTCREATORBUG-30347
        # Subject Branch Project Status CR V

            con Eike Ziller
            lkos Łukasz Kosiorowski
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes